home layout - left content

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,21 +1,4 @@
 .Section {
-    display: flex;
-    align-content: start;
-    min-height: 700px;
-    padding-bottom: 138px;
-    padding-top: 40px;
-    padding: 60px 0;
-    position: relative;
-    flex-wrap: wrap;
-    width: 100%;
-    max-width: 1128px;
-    align-items: center;
-    margin: auto;
-}
-
-@media (max-width: 768px) {
-    .Section {
-        margin: auto;
-        min-width: 0;
-    }
+    /* text-align: center;
+    display: flex; */
 }
