--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,3 +1,19 @@
 .container {
-    padding: 0px;
+    display: flex;
+    align-content: start;
+    min-height: 700px;
+    padding: 60px 0;
+    position: relative;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 1128px;
+    align-items: center;
+    margin: auto;
+}
+
+@media (max-width: 768px) {
+    .container {
+        margin: auto;
+        min-width: 0;
+    }
 }
