--- a/src/components/RightContent/RightContent.module.css
+++ b/src/components/RightContent/RightContent.module.css
@@ -1,3 +1,80 @@
 .right-content {
     grid-area: rightside;
 }
+
+.follow-card {
+    text-align: center;
+    overflow: hidden;
+    margin-bottom: 8px;
+    background-color: #fff;
+    border-radius: 5px;
+    position: relative;
+    border: none;
+    box-shadow: 0 0 0 1px rgb(0 0 0 / 15%), 0 0 0 rgb(0 0 0 / 20%);
+    padding: 12px;
+}
+
+.title {
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 16px;
+    width: 100%;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.feed-list {
+    margin-top: 16px;
+}
+
+.feed-list li {
+    display: flex;
+    align-items: center;
+    margin: 12px 0;
+    position: relative;
+    font-size: 14px;
+}
+
+.feed-list li div {
+    display: flex;
+    flex-direction: column;
+}
+
+.feed-list li button {
+    background-color: transparent;
+    color: rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.6);
+    padding: 16px;
+    align-items: center;
+    border-radius: 15px;
+    box-sizing: border-box;
+    font-weight: 600;
+    display: inline-flex;
+    justify-content: center;
+    max-height: 32px;
+    max-width: 480px;
+    text-align: center;
+    outline: none;
+}
+
+.avatar {
+    background-image: url('https://static-exp1.licdn.com/sc/h/1b4vl1r54ijmrmcyxzoidwmxs');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 48px;
+    height: 48px;
+    margin-right: 8px;
+}
+
+.recommendations {
+    color: #0a66c2;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+}
+
+.banner-card img {
+    width: 100%;
+    height: 100%;
+}
