--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -19,3 +19,175 @@
     margin: 0 0 8px;
     background: white;
 }
+
+.share-box div button {
+    outline: none;
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
+    line-height: 1.5;
+    min-height: 48px;
+    background: transparent;
+    border: none;
+    display: flex;
+    font-weight: 600;
+    align-items: center;
+}
+
+.share-box div:first-child {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px 0px 16px;
+}
+
+.share-box div:first-child img {
+    width: 48px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.share-box div:first-child button {
+    margin: 4px 0;
+    flex-grow: 1;
+    border-radius: 35px;
+    padding-left: 16px;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    background-color: white;
+    text-align: left;
+}
+
+.share-box div:nth-child(2) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 4px;
+}
+.share-box div:nth-child(2) button img {
+    margin: 0 4px 0 -2px;
+}
+
+.share-box div:nth-child(2) button span {
+    color: #70b5f9;
+}
+
+.article {
+    padding: 0;
+    margin: 0 0 8px;
+    overflow: visible;
+}
+
+.shared-actor {
+    padding-right: 40px;
+    flex-wrap: nowrap;
+    padding: 12px 16px 0;
+    margin-bottom: 8px;
+    align-items: center;
+    display: flex;
+}
+
+.shared-actor a {
+    margin-right: 12px;
+    flex-grow: 1;
+    overflow: hidden;
+    display: flex;
+    text-decoration: none;
+}
+
+.shared-actor a img {
+    width: 48px;
+    height: 48px;
+}
+.shared-actor a > div {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 0;
+    margin-left: 8px;
+    overflow: hidden;
+}
+
+.shared-actor a > div span {
+    text-align: left;
+}
+
+.shared-actor a > div span:first-child {
+    font-size: 14px;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 1);
+}
+.shared-actor a > div span:nth-child(n + 1) {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.shared-actor button {
+    position: absolute;
+    right: 12px;
+    top: 0;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+.description {
+    padding: 0 16px;
+    overflow: hidden;
+    color: rgba(0, 0, 0, 0.9);
+    font-size: 14px;
+    text-align: left;
+}
+
+.shared-img {
+    margin-top: 8px;
+    width: 100%;
+    display: block;
+    position: relative;
+    background-color: #f9fafb;
+}
+
+.shared-img img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
+.social-count {
+    line-height: 1.3;
+    display: flex;
+    align-items: flex-start;
+    overflow: auto;
+    margin: 0 16px;
+    padding: 8px 0;
+    border-bottom: 1px solid #e9e5df;
+    list-style: none;
+}
+
+.social-count li {
+    margin-right: 5px;
+    font-size: 12px;
+}
+
+.social-count li button {
+    display: flex;
+}
+
+.social-actions {
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
+    min-height: 40px;
+    padding: 4px 8px;
+}
+
+.social-actions button {
+    display: inline-flex;
+    align-items: center;
+    padding: 8px;
+    color: #0a66c2;
+}
+
+@media screen and (min-width: 768px) {
+    .social-actions button span {
+        margin-left: 8px;
+    }
+}
