create and save post to firebase

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,23 @@ ul {
     vertical-align: baseline;
     background: transparent;
 }
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
