--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -7,6 +7,7 @@
     z-index: 9999;
     color: black;
     background-color: rgba(0, 0, 0, 0.8);
+    animation: fadeIn 0.4s;
 }
 
 .modal-content {
@@ -127,6 +128,16 @@
     color: white;
 }
 
+.post-button:disabled {
+    background-color: rgba(0, 0, 0, 0.6);
+    cursor: not-allowed;
+    color: rgba(1, 1, 1, 0.2);
+}
+
+.post-button:disabled:hover {
+    background: rgba(0, 0, 0, 0.8);
+}
+
 .post-button:hover {
     background-color: #004182;
 }
@@ -145,4 +156,11 @@
     height: 35px;
     font-size: 16px;
     margin-bottom: 20px;
+}
+
+.upload-image {
+    text-align: center;
+}
+.upload-image img {
+    width: 100%;
 }
